--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,8 @@ body {
 nav {
   color: rgb(65, 121, 206);
   position: fixed;
-  width: 100vw;
-  height: 5vh;
+  width: 0vw;
+  height: 0vh;
   top: 0;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -31,11 +31,22 @@ nav {
   /* border: 1px solid red; */
 }
 
+button {
+  width: 200px;
+  padding: 11px;
+  margin: 5px;
+  border-radius: 10px;
+  display: grid;
+  place-items: center;
+}
+
 a {
   color: var(--main-color);
-  width: 25vw;
+  width: 40vw;
   height: 5vh;
-  border: 3px solid var(--main-color);
+  margin-top: 5px;
+  /* border: 3px solid var(--main-color); */
+  border-radius: 0.25rem;
   display: grid;
   place-items: center;
   text-decoration: none;
@@ -59,4 +70,44 @@ section {
   display: grid;
   place-items: center;
   /* border: 1px solid red; */
+}
+
+.dropdown {
+  /* border: 1px solid red; */
+  margin-top: 20px;
+  margin-left: 100px;
+  /* position: relative; */
+}
+.dropdown-menu {
+  display: grid;
+  place-items: center;
+  /* position: absolute; */
+  left: -10px;
+  top: calc(100% + 0.25rem);
+  background: rgb(26, 26, 26);
+  padding: 0.75rem;
+  border-radius: 0.5rem;
+  box-shadow: 0px -20px 60px -20px rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: opacity 150ms ease-in-out, transform 450ms ease-in-out;
+  border: 2px solid rgb(161, 160, 160);
+  /* border: 1px solid red; */
+}
+.dropdown > .link:focus + .dropdown-menu {
+  opacity: 1;
+  transform: translateY(0);
+}
+.link {
+  background-color: var(--background-color);
+  color: rgb(65, 121, 206);
+  display: grid;
+  place-items: center;
+  border: 2px solid rgb(161, 160, 160);
+  align-items: center;
+  /* border: 1px solid red; */
+}
+
+.fa-solid fa-house-chimney {
+  width: 100vw;
 }
