--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope&display=swap");
 
 :root {
-  --main-color: rgb(65, 121, 206);
+  /* --main-color: rgb(65, 121, 206); */
+  --main-color: rgb(230, 94, 94);
 }
 
 * {
@@ -18,7 +19,7 @@ body {
 }
 
 nav {
-  color: rgb(65, 121, 206);
+  color: var(--main-color);
   position: fixed;
   width: 0vw;
   height: 0vh;
@@ -74,12 +75,12 @@ section {
 
 .dropdown.active > .link,
 .link:hover {
-  color: rgb(65, 121, 206);
+  color: var(--main-color);
 }
 
 .dropdown {
   /* border: 1px solid red; */
-  margin-top: 10px;
+  margin-top: 20px;
   margin-left: 100px;
   /* position: relative; */
 }
@@ -91,9 +92,10 @@ section {
   top: calc(100% + 0.25rem);
   background: rgb(26, 26, 26);
   padding: 0.75rem;
-  border-radius: 0.5rem;
+  border-radius: 0.35rem;
   box-shadow: 0px -20px 60px -20px rgba(0, 0, 0, 0.7);
   opacity: 0;
+  height: 30vh;
   pointer-events: none;
   transform: translateY(-10px);
   transition: opacity 150ms ease-in-out, transform 450ms ease-in-out;
@@ -108,16 +110,18 @@ section {
 }
 .link {
   background-color: var(--background-color);
-  color: rgb(65, 121, 206);
+  box-shadow: 0px 10px 20px 7px rgba(0, 0, 0, 0.31);
+  color: var(--main-color);
   display: grid;
   cursor: pointer;
+  border-radius: 0.25rem;
   width: 50vw;
-  height: 7vh;
+  height: 8.5vh;
   place-items: center;
   border: 2px solid rgb(161, 160, 160);
   align-items: center;
   /* border: 1px solid red; */
 }
 .fa-solid {
-  transform: scale(1.75);
+  transform: scale(2);
 }
