--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ section {
   /* position: absolute; */
   left: -10px;
   top: calc(100% + 0.25rem);
-  background: rgb(26, 26, 26);
+  background-color: rgb(26, 26, 26);
   padding: 0.75rem;
   border-radius: 0.35rem;
   box-shadow: 0px -20px 60px -20px rgba(0, 0, 0, 0.7);
@@ -109,7 +109,7 @@ section {
   pointer-events: auto;
 }
 .link {
-  background-color: var(--background-color);
+  background-color: rgb(26, 26, 26);
   box-shadow: 0px 10px 20px 7px rgba(0, 0, 0, 0.31);
   color: var(--main-color);
   display: grid;
