--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@
   margin: 0;
   padding: 0;
   font-family: "Manrope", sans-serif;
-
   /* border: 1px solid red; */
 }
 
@@ -19,7 +18,16 @@ body {
 }
 
 nav {
-  color: var(--main-color);
+  position: fixed;
+  width: 100vw;
+  height: 10vh;
+  z-index: 5;
+  border: 1px solid red;
+  /* display: grid;
+  place-items: center;
+  margin: auto; */
+  /* margin-top: -80px; */
+  /* color: var(--main-color);
   position: fixed;
   width: 0vw;
   height: 0vh;
@@ -27,9 +35,22 @@ nav {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   place-items: center;
-  background: rgb(26, 26, 26);
-  z-index: 5;
-  /* border: 1px solid red; */
+  background: rgb(26, 26, 26);*/
+}
+
+.home-button {
+  /* position: fixed; */
+  margin: auto;
+  padding: 0px;
+  margin-top: 0px;
+  /* position: fixed; */
+  width: 53vw;
+  height: 9.5vh;
+  padding: 0%;
+  display: grid;
+  place-items: center;
+  font-size: 25px;
+  border: 1px solid red;
 }
 
 button {
@@ -67,7 +88,7 @@ p {
 section {
   color: rgb(255, 255, 255);
   font-style: bold;
-  height: 50vh;
+  height: 14vh;
   display: grid;
   place-items: center;
   /* border: 1px solid red; */
@@ -79,9 +100,14 @@ section {
 } */
 
 .dropdown {
+  /* position: absolute; */
   /* border: 1px solid red; */
-  margin-top: 20px;
-  margin-left: 100px;
+  /* margin: auto;
+  padding: auto;
+  display: grid;
+  place-items: center; */
+  /* margin-top: 20px;
+  margin-left: 100px; */
   /* position: relative; */
 }
 .dropdown-menu {
@@ -124,4 +150,7 @@ section {
 }
 .fa-solid {
   transform: scale(2);
+}
+
+@media (min-width: 600px) {
 }
