--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope&display=swap");
 
 :root {
-  /* --main-color: rgb(65, 121, 206); */
   --main-color: rgb(230, 94, 94);
 }
 
@@ -14,39 +13,26 @@
 }
 
 body {
+  width: 100vw;
+  height: 100vh;
   background-color: rgb(26, 26, 26);
+  /* border: 1px solid red; */
 }
 
 nav {
   position: fixed;
-  width: 100vw;
+  /* width: 100vw; */
   height: 10vh;
+  margin-top: 200px;
   z-index: 5;
-  /* border: 1px solid red; */
-  /* display: grid;
-  place-items: center;
-  margin: auto; */
-  /* margin-top: -80px; */
-  /* color: var(--main-color);
-  position: fixed;
-  width: 0vw;
-  height: 0vh;
-  top: 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  place-items: center;
-  background: rgb(26, 26, 26);*/
 }
 
 .home-button {
-  /* position: fixed; */
-  margin: auto;
+  /* margin: auto; */
   padding: 0px;
   margin-top: 50px;
-  /* position: fixed; */
-  width: 53vw;
+  width: 300px;
   height: 9.5vh;
-  padding: 0%;
   display: grid;
   place-items: center;
   font-size: 20px;
@@ -54,20 +40,22 @@ nav {
 }
 
 button {
-  width: 200px;
-  padding: 11px;
-  margin: 5px;
+  max-width: 300px;
+  align-items: center;
+  position: relative;
+  /* padding: 11px; */
+  /* margin: 5px; */
   border-radius: 10px;
   display: grid;
   place-items: center;
+  /* border: 1px solid red; */
 }
 
 a {
   color: var(--main-color);
-  width: 40vw;
+  width: 100%;
   height: 5vh;
   margin-top: 5px;
-  /* border: 3px solid var(--main-color); */
   border-radius: 0.25rem;
   display: grid;
   place-items: center;
@@ -88,45 +76,38 @@ p {
 section {
   color: rgb(255, 255, 255);
   font-style: bold;
-  height: 25vh;
+  height: 10vh;
+  margin-top: -55px;
   display: grid;
   place-items: center;
   /* border: 1px solid red; */
 }
 
-/* .dropdown.active > .link,
-.link:hover {
-  color: var(--main-color);
-} */
-
 .dropdown {
-  /* position: absolute; */
-  /* border: 1px solid red; */
-  /* margin: auto;
-  padding: auto;
-  display: grid;
+  /* display: grid;
   place-items: center; */
-  /* margin-top: 20px;
-  margin-left: 100px; */
-  /* position: relative; */
+  /* width: 400px; */
+  z-index: 1;
+  /* border: 1px solid red; */
 }
 .dropdown-menu {
   display: grid;
   place-items: center;
-  /* position: absolute; */
-  left: -10px;
+  position: relative;
+  margin-top: 10px;
   top: calc(100% + 0.25rem);
   background-color: rgb(26, 26, 26);
   padding: 0.75rem;
   border-radius: 0.35rem;
   box-shadow: 0px -20px 60px -20px rgba(0, 0, 0, 0.7);
   opacity: 0;
+  width: 300px;
   height: 30vh;
   pointer-events: none;
-  transform: translateY(-10px);
+  transform: translateY(-70px);
   transition: opacity 150ms ease-in-out, transform 450ms ease-in-out;
   border: 2px solid rgb(161, 160, 160);
-  transform: scale(0.5);
+  z-index: -1;
   /* border: 1px solid red; */
 }
 .dropdown.active > .link + .dropdown-menu {
@@ -141,16 +122,65 @@ section {
   display: grid;
   cursor: pointer;
   border-radius: 0.25rem;
-  width: 50vw;
-  height: 8.5vh;
+  width: 75vw;
+  height: 9.5vh;
   place-items: center;
   border: 2px solid rgb(161, 160, 160);
-  align-items: center;
   /* border: 1px solid red; */
 }
 .fa-solid {
   transform: scale(2);
 }
 
-@media (min-width: 600px) {
+@media (min-width: 1024px) {
+  .paragraph {
+    font-size: 30px;
+    width: 100%;
+  }
+  .skill-container {
+    max-width: 40%;
+  }
+  .project-container {
+    max-width: 10%;
+    max-height: 10%;
+  }
+  .project-cont-below {
+    /* margin-right: px; */
+    max-width: 100%;
+    display: flex;
+    /* border: 3px solid red; */
+  }
+  .project {
+    flex: 1;
+    display: grid;
+    place-items: center;
+    /* border: 2px solid red; */
+    /* margin-right: 20px; */
+  }
+}
+@media (min-width: 1600px) {
+  html {
+    display: grid;
+    place-items: center;
+  }
+  body {
+    max-width: 60%;
+  }
+  .project-container {
+    max-width: 10%;
+    max-height: 10%;
+  }
+  .project-cont-below {
+    /* margin-right: px; */
+    max-width: 100%;
+    display: flex;
+    /* border: 3px solid red; */
+  }
+  .project {
+    flex: 1;
+    display: grid;
+    place-items: center;
+    /* border: 2px solid red; */
+    /* margin-right: 20px; */
+  }
 }
