--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ nav {
   /* margin: auto; */
   padding: 0px;
   margin-top: 50px;
-  width: 300px;
+  /* width: 300px; */
   height: 9.5vh;
   display: grid;
   place-items: center;
