--- a/styles.css
+++ b/styles.css
@@ -30,9 +30,9 @@ nav {
 .home-button {
   /* margin: auto; */
   padding: 0px;
-  margin-top: 50px;
-  /* width: 300px; */
-  height: 9.5vh;
+  /* margin-top: 50px; */
+  width: 300px;
+  /* height: 9.5vh; */
   display: grid;
   place-items: center;
   font-size: 20px;
