--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ nav {
   /* margin: auto; */
   padding: 0px;
   /* margin-top: 50px; */
+  margin-left: 50px;
   width: 300px;
   /* height: 9.5vh; */
   display: grid;
