--- a/styles.css
+++ b/styles.css
@@ -20,29 +20,24 @@ body {
 }
 
 nav {
-  position: fixed;
-  /* width: 100vw; */
-  height: 10vh;
-  margin-top: 200px;
+  display: grid;
+  place-items: center;
   z-index: 5;
 }
 
 .home-button {
-  /* margin: auto; */
-  padding: 0px;
-  margin-top: 50px;
-  width: 300px;
-  height: 9.5vh;
-  display: grid;
-  place-items: center;
-  font-size: 20px;
+  position: fixed;
+  top: 70px;
+  left: 56px;
+  height: 10vh;
+  margin-bottom: 0px;
   /* border: 1px solid red; */
 }
 
 button {
   max-width: 300px;
-  align-items: center;
-  position: relative;
+  /* align-items: center; */
+  /* position: relative; */
   /* padding: 11px; */
   /* margin: 5px; */
   border-radius: 10px;
@@ -73,22 +68,35 @@ p {
   position: relative;
 }
 
+.page-title {
+  font-size: 50px;
+  margin: 10%;
+  margin-top: 250px;
+}
+.page-desc {
+  display: grid;
+  place-items: center;
+  text-align: center;
+  padding: 20px;
+  font-size: 25px;
+  margin-bottom: 5%;
+  text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
+}
+.page-bottom {
+  height: 100px;
+}
 section {
+  /* position: fixed; */
   color: rgb(255, 255, 255);
   font-style: bold;
-  height: 10vh;
-  margin-top: -55px;
+  /* margin-top: -55px; */
   display: grid;
   place-items: center;
   /* border: 1px solid red; */
 }
 
 .dropdown {
-  /* display: grid;
-  place-items: center; */
-  /* width: 400px; */
   z-index: 1;
-  /* border: 1px solid red; */
 }
 .dropdown-menu {
   display: grid;
@@ -107,7 +115,7 @@ section {
   transform: translateY(-70px);
   transition: opacity 150ms ease-in-out, transform 450ms ease-in-out;
   border: 2px solid rgb(161, 160, 160);
-  z-index: -1;
+  z-index: 1;
   /* border: 1px solid red; */
 }
 .dropdown.active > .link + .dropdown-menu {
@@ -133,6 +141,17 @@ section {
 }
 
 @media (min-width: 1024px) {
+  .home-button {
+    left: 35.5vw;
+  }
+  .page-title {
+    font-size: 60px;
+  }
+  .page-desc {
+    font-size: 30px;
+    width: 50vw;
+  }
+
   /* Home Page */
   .paragraph {
     font-size: 30px;
@@ -202,6 +221,9 @@ section {
   }
   body {
     max-width: 60%;
+  }
+  .home-button {
+    left: 42.2vw;
   }
   .project-container {
     max-width: 10%;
