--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ section {
   box-shadow: 0px -20px 60px -20px rgba(0, 0, 0, 0.7);
   opacity: 0;
   width: 300px;
-  height: 30vh;
+  /* height: 30vh; */
   pointer-events: none;
   transform: translateY(-70px);
   transition: opacity 150ms ease-in-out, transform 450ms ease-in-out;
